public/css/main.css
html {
    margin: 0;
    padding: 0;
    background-color: #FFF;
}

* {
    box-sizing: border-box;
}

body {
    background-color: #ECEFF1;
    color: #111;
    font-family: Nunito, Helvetica, Arial, sans-serif;
    margin: 0;
    padding: 1em;
    min-height: 100vh;
    min-width: 100vw;
}

body.dark-theme {
    filter: invert(1) hue-rotate(180deg);
}

table {
    border-collapse: collapse;
    width: 100%;
}

td, th {
    border: 1px solid #888;
    padding: 8px;
}

tr:nth-child(even) {
    background-color: #ddd;
}

